tentativa de ajuste da data do mês - demonstrativos

--- a/public/app/demonstrativos/views/create-demonstrativo.client.view.html
+++ b/public/app/demonstrativos/views/create-demonstrativo.client.view.html
@@ -51,13 +51,13 @@
             </div>
         </div>
         <div class="row">
-            <div class="col-lg-12">
+            <div class="col-lg-12" ng-hide="true">
                 <ibox-demonstrativo-list></ibox-demonstrativo-list>
             </div>
         </div>
     </div>
 </section>
-<div class="ibox float-e-margins">
+<div class="ibox float-e-margins" ng-hide="true">
     <div class="ibox-title">
         <h5>Tabela de Produtos <small class="text-danger"> {{ auxTestes }}</small></h5>
         <div ibox-tools></div>
