--- a/public/app/demonstrativos/views/partials/ibox-cadastro-demonstrativos.partials.view.html
+++ b/public/app/demonstrativos/views/partials/ibox-cadastro-demonstrativos.partials.view.html
@@ -7,11 +7,40 @@
         <br/><br/>
         <form data-ng-submit="create()">
             <div class="form-group">
-            <div class="input-group">
-            <span class="input-group-addon"><i class="fa fa-calendar"></i></span>
-            <input type="date" class="form-control" data-ng-model="data" ng-change="onChange()">
+                <label>Data</label>
+                <div class="input-group date">
+                    <label for="inputData" class="input-group-addon"><i class="fa fa-calendar"></i></label>
+                    <input type="datetime" class="form-control" id="inputData" date-time ng-model="data" view="month" auto-close="true" min-view="month" format="MMMM YYYY">
+                </div>
             </div>
-            </div>
+            <!--<div class="form-group">-->
+                <!--<div class="input-group"-->
+                     <!--moment-picker="dia"-->
+                     <!--ng-model="dia"-->
+                     <!--ng-change="onChange(moment-picker)"-->
+                     <!--locale="pt-br"-->
+                     <!--format="DD/MM/YYYY">-->
+                                    <!--<span class="input-group-addon">-->
+                                        <!--<i class="fa fa-calendar"></i>-->
+                                    <!--</span>-->
+                    <!--<input class="form-control"-->
+                           <!--type="datetime"-->
+                           <!--placeholder="Select a date"-->
+                           <!--ng-change="onChange()"-->
+                           <!--ng-model="dia"-->
+                           <!--start-view="month"-->
+                           <!--min-view="month"-->
+                           <!--locale="pt-br"-->
+                           <!--format="DD/MM/YYYY"-->
+                           <!--ng-model-options="{ updateOn: 'blur' }">-->
+                <!--</div>-->
+            <!--</div>-->
+            <!--<div class="form-group">-->
+                <!--<div class="input-group">-->
+                    <!--<span class="input-group-addon"><i class="fa fa-calendar"></i></span>-->
+                    <!--<input type="date" class="form-control" data-ng-model="data" ng-change="onChange()">-->
+                <!--</div>-->
+            <!--</div>-->
             <table class="table table-striped no-margins">
                 <thead>
                 <tr>
