--- a/public/app/caixas/views/create-caixa.client.view.html
+++ b/public/app/caixas/views/create-caixa.client.view.html
@@ -14,7 +14,7 @@
     </div>
     <div class="wrapper wrapper-content animated fadeInRight">
         <div class="row">
-            <form data-ng-submit="create()" class="form-horizontal">
+            <div data-ng-submit="create()" class="form-horizontal">
                 <div class="row">
                     <div class="col-sm-4">
                         <div class="ibox float-e-margins">
@@ -24,8 +24,13 @@
                             </div>
                             <div class="ibox-content">
                                 <br/><br/>
-                                <div class="form-group">
-                                    <input type="date" class="form-control" id="inputNomeRuleSet" name="data_caixa" data-ng-model="data_caixa" placeholder="Data">
+                                <div class="col-lg-12">
+                                    <div class="form-group">
+                                        <div class="input-group">
+                                            <label for="inputDataCaixa" class="input-group-addon"><i class="fa fa-calendar"></i></label>
+                                            <input type="date" id="inputDataCaixa" class="form-control" data-ng-model="data_caixa" ng-change="onChange()">
+                                        </div>
+                                    </div>
                                 </div>
                                 <table class="table table-striped no-margins">
                                     <thead>
@@ -136,6 +141,33 @@
                             </div>
                             <div class="ibox-content">
                                 <br/>
+                                <div class="row">
+                                    <div class="col-lg-5">
+                                        <div class="form-group-sm">
+                                            <input style="text-align:left;" type="text" class="form-control input-transparente-tabela" id="inputDespesaManhaDescricao" name="abertura.manha.valor" data-ng-model="objDespesaManha.descricao" placeholder="">
+                                        </div>
+                                    </div>
+                                    <div class="col-lg-5">
+                                        <div class="form-group-sm">
+                                            <input type="number" step="any" class="form-control input-sm" placeholder="Valor">
+                                        </div>
+                                    </div>
+                                </div>
+                                <br/>
+                                <!--<div class="col-lg-12">-->
+                                    <!--<div class="form-inline">-->
+                                        <!--<div class="form-group" style="margin-right: 5%;">-->
+                                            <!--&lt;!&ndash;<label for="exampleInputEmail2" class="sr-only">Email address</label>&ndash;&gt;-->
+                                            <!--<input type="email" placeholder="Enter email" id="exampleInputEmail2"-->
+                                                   <!--class="form-control">-->
+                                        <!--</div>-->
+                                        <!--<div class="form-group"style="">-->
+                                            <!--&lt;!&ndash;<label for="exampleInputPassword2" class="sr-only">Password</label>&ndash;&gt;-->
+                                            <!--<input type="password" placeholder="Password" id="exampleInputPassword2"-->
+                                                   <!--class="form-control">-->
+                                        <!--</div>-->
+                                    <!--</div>-->
+                                <!--</div>-->
                                 Manhã
                                 <table class="table table-striped no-margins">
                                     <thead>
@@ -147,7 +179,7 @@
                                     </thead>
                                     <tbody>
                                     <tr>
-                                        <td><input style="text-align:left;" type="text" class="form-control input-transparente-tabela" id="inputDespesaManhaDescricao" name="abertura.manha.valor" data-ng-model="objDespesaManha.descricao" placeholder=""></td>
+                                        <td></td>
                                         <td><input style="text-align:center;" type="number" step="any" class="form-control input-transparente-tabela" id="inputDespesaManhaValor" name="abertura.manha.valor" data-ng-model="objDespesaManha.valor" placeholder=""></td>
                                         <td>
                                             <i class="fa fa-plus clickable" ng-click="addDespesaManha()"></i>
