vou fazer um novo branch para testar alterações no modelo do caixa - turnos

--- a/public/app/caixas/views/view-caixa.client.view.html
+++ b/public/app/caixas/views/view-caixa.client.view.html
@@ -165,8 +165,7 @@
                     </tr>
                     </tbody>
                 </table>
-            </div>
-            <div class="col-lg-3">
+                <br/><br/>
                 <table class="table no-margins">
                     <thead>
                     <tr>
@@ -197,8 +196,36 @@
                     </tbody>
                 </table>
             </div>
-            <div class="col-lg-1"></div>
-            <div class="col-lg-6"></div>
+            <div class="col-lg-5">
+                <div class="ibox float-e-margins">
+                    <div class="ibox-title">
+                        <h5>Conferências</h5>
+                        <div ibox-tools></div>
+                    </div>
+                    <div class="ibox-content">
+                        <br/><br/>
+                        <table class="table table-striped no-margins">
+                            <thead>
+                            <tr>
+                                <th></th>
+                                <th style="text-align: center;">Manhã</th>
+                                <th style="text-align: center;">Tarde</th>
+                                <th style="text-align: center;">Tarde</th>
+                            </tr>
+                            </thead>
+                            <tbody>
+                            <tr>
+                                <td>Geral</td>
+                                <td><input style="text-align:center;" type="number" step="any" class="form-control input-transparente-tabela" id="inputAberturaCaixaManhaf" name="" data-ng-model="caixa.conferencias.geral.manha.abertura_venda" placeholder=""></td>
+                                <td><input style="text-align:center;" type="number" step="any" class="form-control input-transparente-tabela" id="inputAberturaCaixaTardef" name="" data-ng-model="caixa.conferencias.geral.manha.entradas" placeholder=""></td>
+                                <td><input style="text-align:center;" type="number" step="any" class="form-control input-transparente-tabela" id="inputAberturaCaixaTardeg" name="" data-ng-model="caixa.conferencias.geral.manha.diferenca" placeholder=""></td>
+                            </tr>
+
+                            </tbody>
+                        </table>
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
 </section>
