--- a/public/app/caixas/views/view-caixa.client.view.html
+++ b/public/app/caixas/views/view-caixa.client.view.html
@@ -26,14 +26,13 @@
                     </div>
                     <div class="ibox-content">
                         <br/><br/>
-                        <div class="col-lg-12">
-                            <div class="form-group">
-                                <div class="input-group">
-                                    <label for="inputDataCaixa" class="input-group-addon"><i class="fa fa-calendar"></i></label>
-                                    <input type="date" id="inputDataCaixa" class="form-control" data-ng-model="data_caixa" ng-change="onChange()">
-                                </div>
+                        <div class="form-group">
+                            <div class="input-group">
+                                <label for="inputDataCaixa" class="input-group-addon"><i class="fa fa-calendar"></i></label>
+                                <input type="date" id="inputDataCaixa" class="form-control" data-ng-model="caixa.data_caixa">
                             </div>
                         </div>
+
                         <table class="table table-striped no-margins">
                             <thead>
                             <tr>
@@ -45,46 +44,32 @@
                             <tbody>
                             <tr>
                                 <td>Abertura</td>
-                                <td><input style="text-align:center;" type="number" step="any" class="form-control input-transparente-tabela" id="inputAberturaCaixaManha" name="abertura.manha.valor" data-ng-model="caixa.abertura.manha.valor" placeholder=""></td>
-                                <td><input style="text-align:center;" type="number" step="any" class="form-control input-transparente-tabela" id="inputAberturaCaixaTarde" name="abertura.tarde.valor" data-ng-model="caixa.abertura.tarde.valor" placeholder=""></td>
+                                <td><input style="text-align:center;" type="number" step="any" class="form-control input-transparente-tabela" data-ng-model="caixa.entradas.abertura.manha.valor" placeholder=""></td>
+                                <td><input style="text-align:center;" type="number" step="any" class="form-control input-transparente-tabela" data-ng-model="caixa.entradas.abertura.tarde.valor" placeholder=""></td>
                             </tr>
                             <tr>
                                 <td>Venda</td>
-                                <td><input type="number" step="any" class="form-control input-transparente-tabela" id="inputVendasManha" name="vendas.manha.valor" data-ng-model="caixa.vendas.manha.valor" placeholder=""></td>
-                                <td><input type="number" step="any" class="form-control input-transparente-tabela" id="inputVendasTarde" name="vendas.tarde.valor" data-ng-model="caixa.vendas.tarde.valor" placeholder=""></td>
+                                <td><input type="number" step="any" class="form-control input-transparente-tabela" data-ng-model="caixa.entradas.vendas.manha.valor" placeholder=""></td>
+                                <td><input type="number" step="any" class="form-control input-transparente-tabela" data-ng-model="caixa.entradas.vendas.tarde.valor" placeholder=""></td>
                             </tr>
                             <tr>
                                 <td>Transferência</td>
-                                <td><input type="number" step="any" class="form-control input-transparente-tabela" id="inputTransferenciaManha" name="lancamentos.transferencia.manha.valor" data-ng-model="caixa.lancamentos.transferencia.manha.valor" placeholder=""></td>
-                                <td><input type="number" step="any" class="form-control input-transparente-tabela" id="inputTransferenciaTarde" name="lancamentos.transferencia.tarde.valor" data-ng-model="caixa.lancamentos.transferencia.tarde.valor" placeholder=""></td>
+                                <td><input type="number" step="any" class="form-control input-transparente-tabela" data-ng-model="caixa.saidas.transferencia.manha.valor" placeholder=""></td>
+                                <td><input type="number" step="any" class="form-control input-transparente-tabela" data-ng-model="caixa.saidas.transferencia.tarde.valor" placeholder=""></td>
                             </tr>
                             <tr>
-                                <td>Tickets</td>
-                                <td><input type="number" step="any" class="form-control input-transparente-tabela" id="inputTicketsManha" name="vendas.vales.tickets.manha.valor" data-ng-model="caixa.vendas.vales.tickets.manha.valor" placeholder=""></td>
-                                <td><input type="number" step="any" class="form-control input-transparente-tabela" id="inputTicketsTarde" name="vendas.vales.tickets.tarde.valor" data-ng-model="caixa.vendas.vales.tickets.tarde.valor" placeholder=""></td>
-                            </tr>
-                            <tr>
-                                <td>Visa Vale</td>
-                                <td><input type="number" step="any" class="form-control input-transparente-tabela" id="inputVisaValeManha" name="vendas.vales.visa_vale.manha.valor" data-ng-model="caixa.vendas.vales.visa_vale.manha.valor" placeholder=""></td>
-                                <td><input type="number" step="any" class="form-control input-transparente-tabela" id="inputVisaValeTarde" name="vendas.vales.visa_vale.tarde.valor" data-ng-model="caixa.vendas.vales.visa_vale.tarde.valor" placeholder=""></td>
-                            </tr>
-                            <tr>
-                                <td>Master</td>
-                                <td><input type="number" step="any" class="form-control input-transparente-tabela" id="inputMasterManha" name="vendas.cartoes.master.manha.valor" data-ng-model="caixa.vendas.cartoes.master.manha.valor" placeholder=""></td>
-                                <td><input type="number" step="any" class="form-control input-transparente-tabela" id="inputMasterTarde" name="vendas.cartoes.master.tarde.valor" data-ng-model="caixa.vendas.cartoes.master.tarde.valor" placeholder=""></td>
-                            </tr>
-                            <tr>
-                                <td>Visa</td>
-                                <td><input type="number" step="any" class="form-control input-transparente-tabela" id="inputVisaManha" name="vendas.cartoes.visa.manha.valor" data-ng-model="caixa.vendas.cartoes.visa.manha.valor" placeholder=""></td>
-                                <td><input type="number" step="any" class="form-control input-transparente-tabela" id="inputVisaTarde" name="vendas.cartoes.visa.tarde.valor" data-ng-model="caixa.vendas.cartoes.visa.tarde.valor" placeholder=""></td>
+                                <td>Cartões</td>
+                                <td><input type="number" step="any" class="form-control input-transparente-tabela" data-ng-model="caixa.saidas.cartoes.manha.valor" placeholder=""></td>
+                                <td><input type="number" step="any" class="form-control input-transparente-tabela" data-ng-model="caixa.saidas.cartoes.tarde.valor" placeholder=""></td>
                             </tr>
                             <tr>
                                 <td>Dinheiro</td>
-                                <td><input type="number" step="any" class="form-control input-transparente-tabela" id="inputDinheiroManha" name="lancamentos.dinheiro.manha.valor" data-ng-model="caixa.lancamentos.dinheiro.manha.valor" placeholder=""></td>
-                                <td><input type="number" step="any" class="form-control input-transparente-tabela" id="inputDinheiroTarde" name="lancamentos.dinheiro.tarde.valor" data-ng-model="caixa.lancamentos.dinheiro.tarde.valor" placeholder=""></td>
+                                <td><input type="number" step="any" class="form-control input-transparente-tabela" data-ng-model="caixa.saidas.dinheiro.manha.valor" placeholder=""></td>
+                                <td><input type="number" step="any" class="form-control input-transparente-tabela" data-ng-model="caixa.saidas.dinheiro.tarde.valor" placeholder=""></td>
                             </tr>
                             </tbody>
-                        </table>
+                        </table> <!-- Tabela ... -->
+
                         <table class="table table-striped no-margins">
                             <thead>
                             <tr>
@@ -95,22 +80,23 @@
                             <tbody>
                             <tr>
                                 <td>Folhados</td>
-                                <td><input style="text-align:center;" type="number" step="any" class="form-control input-transparente-tabela" id="inputSalgadosFolhados" name="" data-ng-model="caixa.acompanhamentos.salgados.folhados" placeholder=""></td>
+                                <td><input style="text-align:center;" type="number" step="any" class="form-control input-transparente-tabela" data-ng-model="caixa.controles.salgados.folhados" placeholder=""></td>
                             </tr> <!-- Folhados -->
                             <tr>
                                 <td>Outros</td>
-                                <td><input style="text-align:center;" type="number" step="any" class="form-control input-transparente-tabela" id="inputSalgadosOutros" name="" data-ng-model="caixa.acompanhamentos.salgados.outros" placeholder=""></td>
+                                <td><input style="text-align:center;" type="number" step="any" class="form-control input-transparente-tabela" data-ng-model="caixa.controles.salgados.outros" placeholder=""></td>
                             </tr> <!-- Outros -->
                             <tr>
                                 <td>Pão de Queijo</td>
-                                <td><input style="text-align:center;" type="number" step="any" class="form-control input-transparente-tabela" id="inputSalgadosPaoDeQueijo" name="" data-ng-model="caixa.acompanhamentos.salgados.pao_de_queijo" placeholder=""></td>
+                                <td><input style="text-align:center;" type="number" step="any" class="form-control input-transparente-tabela" data-ng-model="caixa.controles.salgados.pao_de_queijo" placeholder=""></td>
                             </tr> <!-- Pão de Queijo -->
                             <tr>
                                 <td>Leitura Z</td>
-                                <td><input style="text-align:center;" type="number" step="any" class="form-control input-transparente-tabela" id="inputLeituraZ" name="" data-ng-model="caixa.acompanhamentos.leitura_z" placeholder=""></td>
+                                <td><input style="text-align:center;" type="number" step="any" class="form-control input-transparente-tabela" data-ng-model="caixa.controles.leitura_z" placeholder=""></td>
                             </tr> <!-- Leitura Z -->
                             </tbody>
-                        </table>
+                        </table> <!-- Salgados -->
+
                         <table class="table table-striped no-margins">
                             <thead>
                             <tr>
@@ -122,19 +108,20 @@
                             <tbody>
                             <tr>
                                 <td>Água</td>
-                                <td><input style="text-align:center;" type="number" step="any" class="form-control input-transparente-tabela" id="inputAguaAbertura" name="acompanhamentos.agua.abertura" data-ng-model="caixa.acompanhamentos.agua.abertura" placeholder=""></td>
-                                <td><input style="text-align:center;" type="number" step="any" class="form-control input-transparente-tabela" id="inputAguaFechamento" name="acompanhamentos.agua.fechamento" data-ng-model="caixa.acompanhamentos.agua.fechamento" placeholder=""></td>
+                                <td><input style="text-align:center;" type="number" step="any" class="form-control input-transparente-tabela" data-ng-model="caixa.controles.agua.abertura" placeholder=""></td>
+                                <td><input style="text-align:center;" type="number" step="any" class="form-control input-transparente-tabela" data-ng-model="caixa.controles.agua.fechamento" placeholder=""></td>
                             </tr> <!-- Água -->
                             <tr>
                                 <td>Luz</td>
-                                <td><input style="text-align:center;" type="number" step="any" class="form-control input-transparente-tabela" id="inputLuzAbertura" name="acompanhamentos.luz.abertura" data-ng-model="caixa.acompanhamentos.luz.abertura" placeholder=""></td>
-                                <td><input style="text-align:center;" type="number" step="any" class="form-control input-transparente-tabela" id="inputLuzFechamento" name="acompanhamentos.luz.fechamento" data-ng-model="caixa.acompanhamentos.luz.fechamento" placeholder=""></td>
-                            </tr> <!-- Água -->
+                                <td><input style="text-align:center;" type="number" step="any" class="form-control input-transparente-tabela" data-ng-model="caixa.controles.luz.abertura" placeholder=""></td>
+                                <td><input style="text-align:center;" type="number" step="any" class="form-control input-transparente-tabela" data-ng-model="caixa.controles.luz.fechamento" placeholder=""></td>
+                            </tr> <!-- Luz -->
                             </tbody>
-                        </table>
+                        </table> <!-- Água e Luz -->
+
                     </div>
                 </div>
-            </div>
+            </div> <!-- ibox Lançamentos Caixa -->
             <div class="col-lg-3">
                 <table class="table no-margins">
                     <thead>
@@ -143,13 +130,13 @@
                     </tr>
                     </thead>
                     <tbody>
-                    <tr data-ng-repeat="desp_m in caixa.lancamentos.despesas.manha">
+                    <tr data-ng-repeat="desp_m in caixa.saidas.despesas.manha">
                         <td>{{ desp_m.descricao }}</td>
                         <td>{{ desp_m.valor | currency: 'R$ ' }}</td>
                         <td><i class="fa fa-remove clickable" ng-click="removeRegistro(desp_m, 'despesa', 'manha')"></i></td>
                     </tr>
                     </tbody>
-                </table>
+                </table> <!-- Tabela Saídas - Manhã -->
                 <br/><br/>
                 <table class="table no-margins">
                     <thead>
@@ -158,13 +145,13 @@
                     </tr>
                     </thead>
                     <tbody>
-                    <tr data-ng-repeat="desp_m in caixa.lancamentos.despesas.tarde">
+                    <tr data-ng-repeat="desp_m in caixa.saidas.despesas.tarde">
                         <td>{{ desp_m.descricao }}</td>
                         <td>{{ desp_m.valor | currency: 'R$ ' }}</td>
                         <td><i class="fa fa-remove clickable" ng-click="removeRegistro(desp_m, 'despesa', 'tarde')"></i></td>
                     </tr>
                     </tbody>
-                </table>
+                </table> <!-- Tabela Saídas - Tarde -->
                 <br/><br/>
                 <table class="table no-margins">
                     <thead>
@@ -179,7 +166,7 @@
                         <td><i class="fa fa-remove clickable" ng-click="removeRegistro(desp_m, 'mov_cofre')"></i></td>
                     </tr>
                     </tbody>
-                </table>
+                </table> <!-- Tabela Movimentação - Cofre -->
                 <br/><br/>
                 <table class="table no-margins">
                     <thead>
@@ -194,7 +181,7 @@
                         <td><i class="fa fa-remove clickable" ng-click="removeRegistro(desp_m, 'mov_geral')"></i></td>
                     </tr>
                     </tbody>
-                </table>
+                </table> <!-- Tabela Movimentação - Geral -->
             </div>
             <div class="col-lg-5">
                 <div class="ibox float-e-margins">
@@ -216,9 +203,9 @@
                             <tbody>
                             <tr>
                                 <td>Geral</td>
-                                <td><input style="text-align:center;" type="number" step="any" class="form-control input-transparente-tabela" id="inputAberturaCaixaManhaf" name="" data-ng-model="caixa.conferencias.geral.manha.abertura_venda" placeholder=""></td>
-                                <td><input style="text-align:center;" type="number" step="any" class="form-control input-transparente-tabela" id="inputAberturaCaixaTardef" name="" data-ng-model="caixa.conferencias.geral.manha.entradas" placeholder=""></td>
-                                <td><input style="text-align:center;" type="number" step="any" class="form-control input-transparente-tabela" id="inputAberturaCaixaTardeg" name="" data-ng-model="caixa.conferencias.geral.manha.diferenca" placeholder=""></td>
+                                <td><input style="text-align:center;" type="number" step="any" class="form-control input-transparente-tabela" id="inputAberturaCaixaManhaf" name="" data-ng-model="caixa.caixa.conferencias.geral.manha.abertura_venda" placeholder=""></td>
+                                <td><input style="text-align:center;" type="number" step="any" class="form-control input-transparente-tabela" id="inputAberturaCaixaTardef" name="" data-ng-model="caixa.caixa.conferencias.geral.manha.entradas" placeholder=""></td>
+                                <td><input style="text-align:center;" type="number" step="any" class="form-control input-transparente-tabela" id="inputAberturaCaixaTardeg" name="" data-ng-model="caixa.caixa.conferencias.geral.manha.diferenca" placeholder=""></td>
                             </tr>
 
                             </tbody>
